<package>
  <name>perception_utils</name>
  <version>1.0.0</version>
  <description>perception_utils</description>
  <maintainer email="venkatraman@cmu.edu">Venkatraman Narayanan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/perception_utils</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Venkatraman Narayanan</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libpcl-all</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lperception_utils" cflags="-I${prefix}/include -O3 -DROS"/>
</export>

</package>
