<package>
  <name>sbpl_perception</name>
  <version>1.0.0</version>
  <description>sbpl_perception</description>
  <maintainer email="venkatraman@cmu.edu">Venkatraman Narayanan</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sbpl_perception</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Venkatraman Narayanan</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>kinect_sim</build_depend>
  <build_depend>cuda_renderer</build_depend>
  <build_depend>perception_utils</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sbpl_perch</build_depend>
  <build_depend>sbpl_utils</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ICP</build_depend>
  <build_depend>image_transport</build_depend>
  
  <!-- <build_depend>libfcl&#45;dev</build_depend> -->
  <!-- <build_depend>libccd&#45;dev</build_depend> -->

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>kinect_sim</run_depend>
  <run_depend>cuda_renderer</run_depend>
  <run_depend>perception_utils</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sbpl_perch</run_depend>
  <run_depend>sbpl_utils</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ICP</run_depend>
  <run_depend>image_transport</run_depend>
  <!-- <run_depend>libfcl&#45;dev</run_depend> -->
  <!-- <run_depend>libccd&#45;dev</run_depend> -->

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>kinect_sim</test_depend> -->
  <!-- <test_depend>perception_utils</test_depend> -->
  <!-- <test_depend>pcl_ros</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>roslib</test_depend> -->
  <!-- <test_depend>sbpl</test_depend> -->
  <!-- <test_depend>sbpl_utils</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lsbpl_perception" cflags="-I${prefix}/include -O3 -DROS"/>
</export>

</package>
